<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.Register">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="416dp"
        android:layout_height="731dp"
        android:scaleType="fitXY"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boxes2" />

    <EditText
        android:id="@+id/textView"
        style="@style/Widget.MaterialComponents.MaterialCalendar.DayTextView"
        android:layout_width="317dp"
        android:layout_height="78dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="172dp"
        android:background="#61FFFFFF"
        android:cursorVisible="true"
        android:fadingEdge="horizontal"
        android:fontFamily="monospace"
        android:lineSpacingExtra="10sp"
        android:text="email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E91E63"
        android:textColorHighlight="#FF9800"
        android:textColorHint="#F30404"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:autoSizeMaxTextSize="@dimen/cardview_default_radius"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="78dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="58dp"
        android:background="#65FFFFFF"
        android:fontFamily="monospace"
        android:lineSpacingExtra="8sp"
        android:text="password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DA0C52"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="#9F6579"
        android:clickable="true"
        android:text="login"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>